--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.9.0
   shared_preferences: ^2.3.3
   get: ^4.6.6
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
