--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   dio: ^5.9.0
   shared_preferences: ^2.3.3
   get: ^4.6.6
-  image_picker: ^1.2.1
-  open_file: ^3.5.11
-  file_picker: ^10.3.8
+  image_picker: ^1.2.1 
+  photo_view: ^0.15.0
+  
 
 dev_dependencies:
   flutter_test:
