--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   get: ^4.6.6
   image_picker: ^1.2.1 
   photo_view: ^0.15.0
+  intl: ^0.20.2
+  url_launcher: ^6.3.2
+  webview_flutter: ^4.13.1
   
 
 dev_dependencies:
