--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.3.2
   webview_flutter: ^4.13.1
+  flutter_html: ^3.0.0
   
 
 dev_dependencies:
